--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -39,17 +39,18 @@
                                         <label for="name">Location Name</label>
                                         <input type="text" id="name" name="name" class="form-control"
                                                placeholder="location name"
-                                               required autofocus>
+                                               autofocus>
                                         <p class="help-block">Enter the name of the location being created.</p>
+                                        <span id="nameError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
 
                                 <!-- Floor input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="floor-group">
                                         <label for="floor">Floor</label>
                                         <select id="floor" name="floor" class="form-control"
-                                                required autofocus>
+                                                autofocus>
                                             <option value=1>1</option>
                                             <option value=2>2</option>
                                             <option value=3>3</option>
@@ -58,6 +59,7 @@
                                             <option value=6>6</option>
                                         </select>
                                         <p class="help-block">Enter the floor where location is located.</p>
+                                        <span id="floorError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
                             </div> <!-- / .row !-->
@@ -66,36 +68,43 @@
 
                                 <!-- Attributes Input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="attribute-group">
                                         <label for="attribute">Attribute</label>
                                         <textarea rows="5" id="attribute" name="attribute" class="form-control"
-                                                  placeholder="Lighting, Natural, Electrical, Socket, etc." autofocus></textarea>
+                                                  placeholder="Lighting, Natural, Electrical, Socket, etc."
+                                                  autofocus></textarea>
                                         <p class="help-block">Enter the attributes the location contains.</p>
+                                        <span id="attributeError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
 
                                 <!-- Tag Input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="tag-group">
                                         <label for="tag">Tag</label>
                                         <textarea rows="5" id="tag" name="tag" class="form-control"
                                                   placeholder="Learning Corner, Circulation Desk, etc."
                                                   autofocus></textarea>
                                         <p class="help-block">Enter the tag used to identify the location.</p>
+                                        <span id="tagError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
                             </div> <!-- / .row !-->
 
-                            <!-- Map Location Input!-->
                             <div class="row">
-                                <div class="col-lg-12">
 
-                                    <p class="input-label">Mark Location</p>
+                                <!-- Map Location Input!-->
+                                <div class="col-lg-6">
+                                    <div class="form-group" id="location-group">
+                                        <p class="input-label">Mark Location</p>
+                                        <span id="locationError" class="help-block"></span>
+                                    </div>
 
-                                    
                                     <!-- Map Control !-->
                                     <div class="row" id="map-control">
-                                        <div class="col-lg-6">
+
+                                        <!-- Draw and select location control !-->
+                                        <div class="col-lg-12">
                                             <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
                                             <div class="row hidden" id="location-draw-controls">
@@ -105,21 +114,32 @@
                                                     <div class="btn btn-success" id="btn-location-save">Save</div>
                                                 </div>
                                             </div>
-                                            <!--<div class="btn btn-default" id="btn-draw">Draw</div>-->
-                                            <!--<div class="btn btn-primary" id="btn-fill">Fill</div>-->
-                                            <!--<div class="btn btn-warning" id="btn-clear">Clear</div>-->
+                                        </div> <!-- /.col-lg-6
+                                    </div> <!-- /#map-control !-->
+                                    </div> <!-- / .col-lg-6 !-->
+                                </div>
 
+                                <div class="col-lg-6">
+                                    <div class="form-group" id="entry-group">
+                                        <p class="input-label">Set Entry Point</p>
+                                        <span id="entryError" class="help-block"></span>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
+                                            <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
+                                            <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
+                                            <div class="btn btn-success" id="btn-navigation-save">Save</div>
                                         </div>
                                     </div>
-                                    <div class="form-group" id="map-group">
-                                        <div id="map-wrapper">
+                                </div>
+                            </div><!-- / .row !-->
+                            <div class="form-group" id="map-group">
+                                <div id="map-wrapper">
 
-                                        </div>
+                                </div>
 
-                                    </div> <!-- / .form-group !-->
-
-                                </div> <!-- / .col-lg-12 !-->
-                            </div> <!-- / .row !-->
+                            </div> <!-- / .form-group !-->
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
@@ -152,11 +172,13 @@
                 </div>
                 <div class="modal-body">
                     <h4 id="modal-message-success" class="alert alert-success hidden">Your location has been saved</h4>
-                    <h4 id="modal-message-warning" class="alert alert-warning hidden">An error occurred and you location was not saved</h4>
+                    <h4 id="modal-message-warning" class="alert alert-warning hidden">An error occurred and you location
+                        was not saved</h4>
                 </div>
                 <div class="modal-footer">
-                    <a href="/dashboard" class="btn btn-default" >Back to Dashboard</a>
-                    <button id="btn-model-close" type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                    <a href="/dashboard" class="btn btn-default">Back to Dashboard</a>
+                    <button id="btn-model-close" type="button" class="btn btn-warning" data-dismiss="modal">Close
+                    </button>
                 </div>
             </div>
 
@@ -164,9 +186,11 @@
     </div>
 
     {{> dashboard/javascript }}
-    <script src="/public/javascripts/draw-polygon.js" ></script>
+    <script src="/public/javascripts/draw-polygon.js"></script>
+
+    <script src="/approvejs/approve.min.js"></script>
 
 
     <!-- Form Controls JS !-->
-    <script src="/public/javascripts/control-form.js" ></script>
+    <script src="/public/javascripts/control-form.js"></script>
 </body>
