--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -135,9 +135,15 @@
                                 </div>
                             </div><!-- / .row !-->
                             <div class="form-group" id="map-group">
+                                 <section id="grid" style="position:absolute"></section>
                                 <div id="map-wrapper">
 
+                                     
+                                 <!-- Nav Grid Placement -->
+                                
+                                    
                                 </div>
+                               
 
                             </div> <!-- / .form-group !-->
 
@@ -191,6 +197,8 @@
     <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
 
     <script src="/approvejs/approve.min.js"></script>
+    <script src="/lodash/lodash.js"></script>
+    <script src="../../public/javascripts/navigation-main.js"></script>
 
 
     <!-- Form Controls JS !-->
