working tool tips with database queries, refactor mouse in and mouse out functions to be seperate callable functions

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -2,6 +2,8 @@
 <html lang="ab">
 <head>
     {{> head }}
+     <!--- tool tip CSS -->
+    <link rel="stylesheet" type="text/css" href="/public/stylesheets/tooltips.css"/>
 </head>
 </html>
 <body>
