--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -113,7 +113,7 @@
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
-                                                    <div class="btn btn-success" id="btn-location-save">Save</div>
+                                                    <div class="btn btn-success" id="btn-location-save">Save Location</div>
                                                 </div>
                                             </div>
                                         </div> <!-- /.col-lg-6
@@ -131,7 +131,7 @@
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
                                             <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
                                             <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
-                                            <div class="btn btn-success" id="btn-navigation-save">Save</div>
+                                            <div class="btn btn-success" id="btn-navigation-save">Set Entry Point</div>
                                         </div>
                                     </div>
                                 </div>
