--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -113,14 +113,15 @@
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
-                                                    <div class="btn btn-success" id="btn-location-save">Save Location</div>
+                                                    <div class="btn btn-success" id="btn-location-save">Save Location
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div> <!-- /.col-lg-6
-                                    </div> <!-- /#map-control !-->
-                                    </div> <!-- / .col-lg-6 !-->
+                                        </div> <!-- /.col-lg-6 !-->
+                                    </div> <!-- /.row !-->
                                 </div>
 
+                                <!-- Entry Point Input !-->
                                 <div class="col-lg-6">
                                     <div class="form-group" id="entry-group">
                                         <p class="input-label">Set Entry Point</p>
@@ -135,6 +136,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div><!-- / .row !-->
                             <div class="form-group" id="map-group">
                                 <div id="map-wrapper">
@@ -194,7 +196,7 @@
 
     <!-- Form Controls JS !-->
 
-    <script src="/public/javascripts/control-form.js" ></script>
+    <script src="/public/javascripts/control-form.js"></script>
 
     <!---- lodash file needed for drawpolygon-->
     <script src="/lodash/lodash.js"></script>
