adding funcitonality to ther forms

--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -86,9 +86,9 @@
                                         return data[d].room_cap;
                                     }
                                 },
-                                    '<a href="details/' + data[d].id + '"><div class="btn btn-default">Detail</div></a>' +
-                                    '<a href="edit/' + data[d].id + '"><div class="btn btn-warning">edit</div></a>' +
-                                    '<a href="delete/' + data[d].id + '"><div class="btn btn-danger">Detail</div></a>'
+                                    '<a href="/dashboard/details/' + data[d].id + '"><div class="btn btn-default">Detail</div></a>' +
+                                    '<a href="/dashboard/edit/' + data[d].id + '"><div class="btn btn-warning">edit</div></a>' +
+                                    '<a href="/dashboard/delete/' + data[d].id + '"><div class="btn btn-danger">Detail</div></a>'
                             ])
                 }
 
