--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -4,7 +4,7 @@
     {{> head }}
 
     <!-- Map dispaly CSS !-->
-    <link rel="stylesheet" type="text/css" href="/public/stylesheets/map-display.css" />
+    <link rel="stylesheet" type="text/css" href="/public/stylesheets/map-display.css"/>
 </head>
 
 <body>
@@ -28,7 +28,9 @@
                 <!-- Form !-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <form role="form">
+
+                        <form href="unknown" method="POST" role="form">
+
                             <div class="row">
 
                                 <!-- Location name input !-->
@@ -37,26 +39,27 @@
                                         <label for="name">Location Name</label>
                                         <input type="text" id="name" name="name" class="form-control"
                                                placeholder="location name"
-                                               required autofocus>
+                                               autofocus>
                                         <p class="help-block">Enter the name of the location being created.</p>
+                                        <span id="nameError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
 
                                 <!-- Floor input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="floor-group">
                                         <label for="floor">Floor</label>
                                         <select id="floor" name="floor" class="form-control"
-                                                
-                                                required autofocus>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
+                                                autofocus>
+                                            <option value=1>1</option>
+                                            <option value=2>2</option>
+                                            <option value=3>3</option>
+                                            <option value=4>4</option>
+                                            <option value=5>5</option>
+                                            <option value=6>6</option>
                                         </select>
                                         <p class="help-block">Enter the floor where location is located.</p>
+                                        <span id="floorError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
                             </div> <!-- / .row !-->
@@ -65,76 +68,136 @@
 
                                 <!-- Attributes Input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="attribute-group">
                                         <label for="attribute">Attribute</label>
                                         <textarea rows="5" id="attribute" name="attribute" class="form-control"
                                                   placeholder="Lighting, Natural, Electrical, Socket, etc."
-                                                   autofocus></textarea>
+                                                  autofocus></textarea>
                                         <p class="help-block">Enter the attributes the location contains.</p>
+                                        <span id="attributeError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
 
                                 <!-- Tag Input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="name-group">
+                                    <div class="form-group" id="tag-group">
                                         <label for="tag">Tag</label>
                                         <textarea rows="5" id="tag" name="tag" class="form-control"
                                                   placeholder="Learning Corner, Circulation Desk, etc."
                                                   autofocus></textarea>
                                         <p class="help-block">Enter the tag used to identify the location.</p>
+                                        <span id="tagError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
                             </div> <!-- / .row !-->
 
 
-                            <!-- Map Location Input!-->
                             <div class="row">
-                                <div class="col-lg-12">
 
-                                    <p class="input-label">Mark Location</p>
-
+                                <!-- Map Location Input!-->
+                                <div class="col-lg-6">
+                                    <div class="form-group" id="location-group">
+                                        <p class="input-label">Mark Location</p>
+                                        <span id="locationError" class="help-block"></span>
+                                    </div>
 
                                     <!-- Map Control !-->
                                     <div class="row" id="map-control">
+
+                                        <!-- Draw and select location control !-->
                                         <div class="col-lg-12">
-                                            <div class="btn btn-default" id="btn-draw">Draw</div>
-                                            <div class="btn btn-primary" id="btn-fill">Fill</div>
-                                            <div class="btn btn-warning" id="btn-clear">Clear</div>
+                                            <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
+                                            <div class="btn btn-default" id="btn-location-select">Select Location</div>
+                                            <div class="row hidden" id="location-draw-controls">
+                                                <div class="col-lg-12">
+                                                    <div class="btn btn-primary" id="btn-location-fill">Fill</div>
+                                                    <div class="btn btn-warning" id="btn-location-clear">Clear</div>
+                                                    <div class="btn btn-success" id="btn-location-save">Save Location
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div> <!-- /.col-lg-6 !-->
+                                    </div> <!-- /.row !-->
+                                </div>
+
+                                <!-- Entry Point Input !-->
+                                <div class="col-lg-6">
+                                    <div class="form-group" id="entry-group">
+                                        <p class="input-label">Set Entry Point</p>
+                                        <span id="entryError" class="help-block"></span>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
+                                            <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
+                                            <div class="btn btn-warning" id="btn-navigation-clear">Clear</div>
+                                            <div class="btn btn-success" id="btn-navigation-save">Set Entry Point</div>
                                         </div>
                                     </div>
+                                </div>
 
-                                    <div class="form-group" id="map-group">
-                                        <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg">
-                                            Your browser does not support SVG
-                                        </object>
-                                    </div> <!-- / .form-group !-->
+                            </div><!-- / .row !-->
+                            <div class="form-group" id="map-group">
+                                <div id="map-wrapper">
 
-                                </div> <!-- / .col-lg-12 !-->
-                            </div> <!-- / .row !-->
+                                </div>
+
+                            </div> <!-- / .form-group !-->
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
                             <button type="submit" class="btn btn-success" id="btn-save">Save</button>
                             <button type="reset" class="btn btn-warning" id="btn-clear">Clear</button>
-                            <button class="btn btn-danger" id="btn-clear">Cancel</button>
-
-
+                            <button class="btn btn-danger" id="btn-cancel">Cancel</button>
                         </form>
                     </div> <!-- col-lg-6 !-->
                 </div> <!-- /.row !-->
+
 
             </div>
             <!-- /.container-fluid -->
         </div>
         <!-- /#page-wrapper -->
-        {{> footer}}
+        {{> footer }}
     </div>
     <!-- /#wrapper -->
 
-    {{> dashboard/javascript }}
 
-    <!-- Form Contron JS !-->
-    <script src="/public/javascripts/control-form.js" ></script>
+    <!-- Result Modal -->
+    <div id="modal-result" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Save Status</h4>
+                </div>
+                <div class="modal-body">
+                    <h4 id="modal-message-success" class="alert alert-success hidden">Your location has been saved</h4>
+                    <h4 id="modal-message-warning" class="alert alert-warning hidden">An error occurred and you location
+                        was not saved</h4>
+                </div>
+                <div class="modal-footer">
+                    <a href="/dashboard" class="btn btn-default">Back to Dashboard</a>
+                    <button id="btn-model-close" type="button" class="btn btn-warning" data-dismiss="modal">Close
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    {{> dashboard/javascript }}
+    <script src="/public/javascripts/draw-polygon.js"></script>
+
+    <script src="/approvejs/approve.min.js"></script>
+
+    <!---- lodash file needed for drawpolygon-->
+    <script src="/lodash/lodash.js"></script>
+
+    <!-- Form Controls JS !-->
+    <script src="/public/javascripts/control-form.js"></script>
 
 
 </body>
