added new buttons

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -802,7 +802,7 @@ table.dataTable thead .sorting:after {
 #map-control{
     height: 65px;
 }
-#location-draw-controls{
+.controls{
     margin-top: 5px;
 }
 
