--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -136,7 +136,7 @@
                                         <div class="col-lg-12">
                                             <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
-                                            <div class="row hidden" id="location-draw-controls">
+                                            <div class="row controls hidden" id="location-draw-controls">
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
@@ -154,7 +154,8 @@
                                         <p class="input-label">Set Entry Point</p>
                                         <span id="entryError" class="help-block"></span>
                                     </div>
-                                    <div class="row">
+                                    <div class="btn btn-default" id="btn-navigation">Draw Location</div>
+                                    <div class="row controls hidden" id="navigation-controls">
                                         <div class="col-lg-12">
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
                                             <div class="btn btn-default" id="btn-navigation-hide">Hide Grid</div>
