load grid from database --currently cant insert new record into database

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -139,10 +139,11 @@
 
                             </div><!-- / .row !-->
                             <div class="form-group" id="map-group">
+                                <section id="grid" style="position:absolute"></section>
+
                                 <div id="map-wrapper">
 
                                 </div>
-
                             </div> <!-- / .form-group !-->
 
                             <!-- Form Control !-->
@@ -193,9 +194,16 @@
     <script src="/public/javascripts/draw-polygon.js"></script>
 
     <script src="/approvejs/approve.min.js"></script>
+    
+   <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
 
     <!---- lodash file needed for drawpolygon-->
     <script src="/lodash/lodash.js"></script>
+    
+    <!-- navigation-main.js -->
+    
+    <script src="../../public/javascripts/navigation-main.js"></script>
 
     <!-- Form Controls JS !-->
     <script src="/public/javascripts/control-form.js"></script>
