--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -90,8 +90,7 @@
     <script src="/public/javascripts/polygon-hover.js"></script>
         <!-- Pathfinding js-->
     <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
-    <script>loadGrid();</script>
-
+<script src="../../public/javascripts/control-navigation.js"></script>
     
 
 </body>
