fix merge conflix, aded buttons to sideba

--- a/views/partials/home/sidebar.handlebars
+++ b/views/partials/home/sidebar.handlebars
@@ -43,6 +43,12 @@
                 <ul class="nav nav-second-level" id="navsb-floor-6">
                 </ul>
             </li>
+            <li>
+                <div class="input-group " >
+                    <div id="nagivation-start" class="btn btn-success">Start</div>
+                    <div id="navigation-clear" class="btn btn-warning">Clear</div>
+                </div>
+            </li>
 
         </ul>
     </div>
