--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -32,6 +32,8 @@
                     <div class="col-lg-12">
 
                         <form href="servicepoint" method="POST" role="form">
+
+                            <!-- Name & Floor !-->
                             <div class="row">
 
                                 <!-- Location name input !-->
@@ -63,8 +65,9 @@
                                         <span id="floorError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
-                            </div> <!-- / .row !-->
+                            </div> <!-- / Name & Floor !-->
 
+                            <!-- Room Number & Url !-->
                             <div class="row">
 
                                 <!-- Room number input !-->
@@ -92,6 +95,7 @@
                                 </div> <!-- / .col-lg-6 !-->
                             </div>
 
+                            <!-- Attribute & Tags !-->
                             <div class="row">
 
                                 <!-- Attributes Input !-->
@@ -117,9 +121,9 @@
                                         <span id="tagError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
-                            </div> <!-- / .row !-->
+                            </div> <!-- / Attribute & Tags !-->
 
-
+                            <!-- Mark Location & Entry Point !-->
                             <div class="row">
 
                                 <!-- Map Location Input!-->
@@ -165,13 +169,16 @@
                                     </div>
                                 </div>
 
-                            </div><!-- / .row !-->
+                            </div> <!-- / Mark Location & Entry Point !-->
+
+                            <!-- Map & Grid !-->
                             <div class="form-group" id="map-group">
+                                <section id="grid" style="position:absolute"></section>
+
                                 <div id="map-wrapper">
 
                                 </div>
-
-                            </div> <!-- / .form-group !-->
+                            </div> <!-- / Map & Grid !-->
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
@@ -219,21 +226,24 @@
 
     {{> dashboard/javascript }}
 
+    <!-- ApprovedJS !-->
+    <script src="/approvejs/approve.min.js"></script>
+
+    <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+
+    <!-- LodashJS !-->
+    <script src="/lodash/lodash.js"></script>
+
     <!-- Draw Polygons js !-->
     <script src="/public/javascripts/draw-polygon.js"></script>
 
-    <!-- Navigation js !-->
+    <!-- Navigation Controls !-->
     <script src="/public/javascripts/navigation-main.js"></script>
 
-    <script src="/approvejs/approve.min.js"></script>
-
-    <!---- lodash file needed for drawpolygon-->
-    <script src="/lodash/lodash.js"></script>
-
-
-
     <!-- Form Controls JS !-->
-    <script src="/public/javascripts/control-form.js"></script>
+    <script src="/public/javascripts/control-form.js" ></script>
+
 
 
 </body>
