--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -65,7 +65,7 @@
                     <div class="col-lg-3 ">
                         <p class="input-label ">Submit Grid</p>
                         <form href="navigation" method="POST" role="form">
-                            <button type="submit" class="btn btn-success" id="btn-save" onclick="saveGrid()">Save</button>
+                            <button type="submit" class="btn btn-success" id="btn-save">Save</button>
                         </form>
                     </div> <!-- col-lg-6 !-->
 
@@ -85,12 +85,12 @@
 
     <!-- Lodash JS !-->
     <script src="/lodash/lodash.js"></script>
-    <script src="../../public/javascripts/navigation-main.js"></script>
-     <!--polygon-hover.js-->
-    <script src="/public/javascripts/polygon-hover.js"></script>
-        <!-- Pathfinding js-->
+
+    <!-- Pathfinding js-->
     <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
-<script src="../../public/javascripts/control-navigation.js"></script>
+
+    <script src="../../public/javascripts/navigation-main.js"></script>
+    <script src="../../public/javascripts/control-navigation.js"></script>
     
 
 </body>
