--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -30,6 +30,8 @@
                     <div class="col-lg-12">
 
                         <form href="room" method="POST" role="form">
+
+                            <!-- Name & Floor !-->
                             <div class="row">
 
                                 <!-- Location name input !-->
@@ -61,10 +63,9 @@
                                         <span id="floorError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
+                            </div> <!-- / Name & Floor !-->
 
-
-                            </div> <!-- / .row !-->
-
+                            <!-- Room Number & Capacity !-->
                             <div class="row">
 
                                 <!-- Room number input !-->
@@ -73,7 +74,7 @@
                                         <label for="number">Room #</label>
                                         <input type="number" id="number" name="number" class="form-control"
                                                placeholder="ex. 201"
-                                               required autofocus>
+                                                autofocus>
 
                                         <p class="help-block">Enter the room number.</p>
                                     </div>
@@ -85,13 +86,14 @@
                                         <label for="capacity">Room Capacity</label>
                                         <input type="number" id="capacity" name="capacity" class="form-control"
                                                placeholder="ex. 32"
-                                               required autofocus>
+                                                autofocus>
 
                                         <p class="help-block">Enter the room capacity.</p>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
-                            </div>
+                            </div> <!-- / Room Number & Capacity !-->
 
+                            <!-- Attribute & Tags !-->
                             <div class="row">
 
                                 <!-- Attributes Input !-->
@@ -117,9 +119,9 @@
                                         <span id="tagError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
+                            </div> <!-- / Attribute & Tags !-->
 
-                            </div> <!-- / .row !-->
-
+                            <!-- Mark Location & Entry Point !-->
                             <div class="row">
 
                                 <!-- Map Location Input!-->
@@ -165,13 +167,16 @@
                                     </div>
                                 </div>
 
-                            </div><!-- / .row !-->
+                            </div> <!-- / Mark Location & Entry Point !-->
+
+                            <!-- Map & Grid !-->
                             <div class="form-group" id="map-group">
+                                <section id="grid" style="position:absolute"></section>
+
                                 <div id="map-wrapper">
 
                                 </div>
-
-                            </div> <!-- / .form-group !-->
+                            </div> <!-- / Map & Grid !-->
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
@@ -218,15 +223,25 @@
     </div>
 
     {{> dashboard/javascript }}
-    <script src="/public/javascripts/draw-polygon.js"></script>
 
+    <!-- ApprovedJS !-->
     <script src="/approvejs/approve.min.js"></script>
 
-    <!---- lodash file needed for drawpolygon-->
+    <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+
+    <!-- LodashJS !-->
     <script src="/lodash/lodash.js"></script>
 
+    <!-- Draw Polygons js !-->
+    <script src="/public/javascripts/draw-polygon.js"></script>
+
+    <!-- Navigation Controls !-->
+    <script src="/public/javascripts/navigation-main.js"></script>
+
     <!-- Form Controls JS !-->
-    <script src="/public/javascripts/control-form.js"></script>
+    <script src="/public/javascripts/control-form.js" ></script>
+
 
 
 </body>
