--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -31,6 +31,7 @@
 
                         <form href="unknown" method="POST" role="form">
 
+                            <!-- Name & Floor !-->
                             <div class="row">
 
                                 <!-- Location name input !-->
@@ -62,8 +63,9 @@
                                         <span id="floorError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
-                            </div> <!-- / .row !-->
+                            </div> <!-- / Name & Floor !-->
 
+                            <!-- Attribute & Tags !-->
                             <div class="row">
 
                                 <!-- Attributes Input !-->
@@ -89,9 +91,10 @@
                                         <span id="tagError" class="help-block"></span>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
-                            </div> <!-- / .row !-->
+                            </div> <!-- / Attribute & Tags !-->
 
 
+                            <!-- Mark Location & Entry Point !-->
                             <div class="row">
 
                                 <!-- Map Location Input!-->
@@ -108,7 +111,7 @@
                                         <div class="col-lg-12">
                                             <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
-                                            <div class="row  controls hidden" id="location-draw-controls">
+                                            <div class="row controls hidden" id="location-draw-controls">
                                                 <div class="col-lg-12">
                                                     <div class="btn btn-primary" id="btn-location-fill">Fill</div>
                                                     <div class="btn btn-warning" id="btn-location-clear">Clear</div>
@@ -137,13 +140,16 @@
                                     </div>
                                 </div>
 
-                            </div><!-- / .row !-->
+                            </div> <!-- / Mark Location & Entry Point !-->
+
+                            <!-- Map & Grid !-->
                             <div class="form-group" id="map-group">
+                                <section id="grid" style="position:absolute"></section>
+
                                 <div id="map-wrapper">
 
                                 </div>
-
-                            </div> <!-- / .form-group !-->
+                            </div> <!-- / Map & Grid !-->
 
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
@@ -190,15 +196,24 @@
     </div>
 
     {{> dashboard/javascript }}
-    <script src="/public/javascripts/draw-polygon.js"></script>
 
+    <!-- ApprovedJS !-->
     <script src="/approvejs/approve.min.js"></script>
 
-    <!---- lodash file needed for drawpolygon-->
+    <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+
+    <!-- LodashJS !-->
     <script src="/lodash/lodash.js"></script>
 
+    <!-- Draw Polygons js !-->
+    <script src="/public/javascripts/draw-polygon.js"></script>
+
+    <!-- Navigation Controls !-->
+    <script src="/public/javascripts/navigation-main.js"></script>
+
     <!-- Form Controls JS !-->
-    <script src="/public/javascripts/control-form.js"></script>
+    <script src="/public/javascripts/control-form.js" ></script>
 
 
 </body>
