added fuse to application, not functional

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -54,7 +54,15 @@
     <!-- Lodash js -->
     <script src="lodash/lodash.js"></script>
 
+    <!-- polygon drawing scripts <-->
     <script src="/public/javascripts/draw-polygon.js" ></script>
+
+    
+    <!-- main search package -->
+    <script src="/fuse/src/fuse.min.js" ></script>
+
+    <!-- main searching script -->
+    <script src="/public/javascripts/search.js" ></script>
 
     <!-- Home UI controls JS !-->
     <script src="/public/javascripts/control-home.js"></script>
