incorperated search function into project

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -22,9 +22,9 @@
                         <div id="map-wrapper">
                                
                         <div id="map-group" style=" display:flex">
-                            <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
+                            <!--<object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
                                 Your browser does not support SVG
-                            </object>
+                            </object>-->
                         </div> <!-- / #map-group !-->
                         <div id="mapDiv" style="display:flex">
 
