bug fixes on nav code, added if elses for pulling from db

--- a/views/dashboard/mapupload.handlebars
+++ b/views/dashboard/mapupload.handlebars
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-lg-12">
 
-                        <form name="imageUp" href="unknown" method="POST" role="form">
+                        <form name="imgUpload" href="unknown" method="POST" role="form">
 
                             <!-- Name & Floor !-->
                             <div class="row">
@@ -42,8 +42,9 @@
                             <!-- Form Control !-->
                             <p class="input-label">Form Options</p>
                             <button type="submit" class="btn btn-success" id="btn-save">Save</button>
-                        </form>
+                       
                     </div> <!-- col-lg-6 !-->
+                   </form>
                 </div> <!-- /.row !-->
 
 
