--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -99,7 +99,7 @@
                     // Added options
                     tableDataRow.push('<a href="/dashboard/details/' + data[d].id + '"><div class="btn btn-default">Detail</div></a>' +
                             '<a href="/dashboard/edit/' + data[d].id + '"><div class="btn btn-warning">edit</div></a>' +
-                            '<a href="/dashboard/delete/' + data[d].id + '"><div class="btn btn-danger">Detail</div></a>');
+                            '<a href="/dashboard/delete/' + data[d].id + '"><div class="btn btn-danger">Delete</div></a>');
 
                     tableData.push(tableDataRow);
 
