--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -158,7 +158,7 @@
                                         <p class="input-label">Set Entry Point</p>
                                         <span id="entryError" class="help-block"></span>
                                     </div>
-                                    <div class="btn btn-default" id="btn-navigation">Draw Location</div>
+                                    <div class="btn btn-default" id="btn-navigation">Set Entry Point</div>
                                     <div class="row controls hidden" id="navigation-controls">
                                         <div class="col-lg-12">
                                             <div class="btn btn-default" id="btn-navigation-show">Show Grid</div>
