c-c-c-hanges, added map upload stuff

--- a/views/dashboard/mapupload.handlebars
+++ b/views/dashboard/mapupload.handlebars
@@ -28,14 +28,14 @@
                 <div class="row">
                     <div class="col-lg-12">
 
-                        <form name="imgUpload" href="unknown" method="POST" role="form">
+                        <form name="imgUpload"  method = "POST" id ="imgUP" role="form">
 
                             <!-- Name & Floor !-->
                             <div class="row">
 
                                 <!-- Location name input !-->
                                 <div class="col-lg-6">
-                                     <input id="imgUpload" type="file" />
+                                     <input id="imgUpload" name = "image" type="file" />
                                 </div> <!-- / .col-lg-6 !-->
 
                                 <br>
