--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -19,7 +19,7 @@
                     <p class="alert alert-warning" id="error-message" hidden="true"><i class="fa fa-exclamation-triangle "></i>
                         Username
                         or Password was incorrect.</p>
-                    <form method="post" action="/user/login" name="login-form">
+                    <form method="post" action="/user/login/master" name="login-form">
                         <h2 class="form-signin-heading">Login</h2>
                         <!-- Username input !-->
                         <div class="form-group">
